<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc</name>
  <version>0.0.0</version>
  <description>RC car controller package</description>
  <maintainer email="aimaim@todo.todo">aimaim</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rc_pwm_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
